Add param definition support.